--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
       border-bottom: 1px solid #ddd;
       padding-bottom: 0.3rem;
       margin-top: 2rem;
-      color: #2b6eff;
+      color: #7896FF;
     }
 
     a {
-      color: #2b6eff;
+      color: #9ACBFF;
       text-decoration: none;
     }
 
